<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".Player_names"
        android:background="@android:color/darker_gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_names"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="32dp"
            android:padding="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1"
            android:textStyle="normal"
            android:textSize="24sp"
            android:layout_marginTop="64dp"
            android:textColor="#C61111"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:id="@+id/player1_name"
            android:textSize="24sp"
            android:inputType="text"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player2"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            android:textColor="#021573"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:textSize="24sp"
            android:inputType="text"
            android:id="@+id/player2_name"
            android:layout_marginTop="16dp"/>


        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="198dp"
            android:background="@drawable/roundbutton"
            android:text="@string/submit"
            android:onClick="submit"
            android:textSize="24sp" />




    </LinearLayout>


</ScrollView>


